<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android = "http://schemas.android.com/apk/res/android"
                                                   xmlns:app = "http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools = "http://schemas.android.com/tools"
                                                   android:layout_width = "match_parent"
                                                   android:layout_height = "match_parent"
                                                   tools:context = ".ActivityPages.GetPaypal">

    <EditText
        android:id = "@+id/editTextEmailAddress"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:autofillHints = ""
        android:ems = "10"
        android:hint = "@string/email_hint"
        android:inputType = "textEmailAddress"
        android:textSize = "18sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textEmailLabel" />

    <TextView
        android:id = "@+id/textEmailLabel"
        android:layout_width = "122dp"
        android:layout_height = "0dp"
        android:layout_marginTop = "12dp"
        android:text = "@string/label_email"
        android:textSize = "18sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/imgLogo" />

    <TextView
        android:id = "@+id/textPasswordLabel"
        android:layout_width = "114dp"
        android:layout_height = "0dp"
        android:layout_marginTop = "8dp"
        android:text = "@string/label_password"
        android:textSize = "18sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/editTextEmailAddress" />

    <EditText
        android:id = "@+id/editTextPassword"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_marginTop = "8dp"
        android:autofillHints = ""
        android:ems = "10"
        android:hint = "@string/password_hint"
        android:inputType = "textPassword"
        android:textSize = "18sp"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toBottomOf = "@+id/textPasswordLabel" />

    <ImageView
        android:id = "@+id/imgLogo"
        android:layout_width = "333dp"
        android:layout_height = "150dp"
        android:layout_marginStart = "40dp"
        android:layout_marginTop = "100dp"
        android:layout_marginBottom = "214dp"
        android:foreground = "@drawable/paypal_logo"
        app:layout_constraintBottom_toTopOf = "@+id/checkOutButton"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintHorizontal_bias = "0.0"
        app:layout_constraintStart_toStartOf = "parent"
        app:layout_constraintTop_toTopOf = "parent"
        android:contentDescription = "@string/todo" />

    <Button
        android:id = "@+id/checkOutButton"
        style = "@style/Widget.AppCompat.Button.Colored"
        android:layout_width = "216dp"
        android:layout_height = "48dp"
        android:layout_marginBottom = "188dp"
        android:background = "@drawable/yellow_rounded_corners"
        android:text = "@string/back_to_checkout"
        android:textColor = "@color/colorPrimary"
        android:textColorLink = "@color/colorAccent"
        android:textSize = "18sp"
        app:layout_constraintBottom_toBottomOf = "parent"
        app:layout_constraintEnd_toEndOf = "parent"
        app:layout_constraintStart_toStartOf = "parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
