<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentCart">

    <TextView
        android:id="@+id/paymentText"
        android:layout_width="242dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:text="@string/payment_text"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/credit_card"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="304dp"
        android:text="@string/credit_card"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/paypal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paymentText"
        app:layout_constraintVertical_bias="0.736" />

    <Button
        android:id="@+id/paypal"
        android:layout_width="170dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="285dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="304dp"
        android:text="@string/paypal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/credit_card"
        app:layout_constraintTop_toBottomOf="@+id/paymentText"
        app:layout_constraintVertical_bias="0.744" />

    <TextView
        android:id="@+id/paymentSuccess"
        android:layout_width="331dp"
        android:layout_height="151dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="200dp"
        android:hint="@string/payment_method"
        android:text=""
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/paypal" />

</androidx.constraintlayout.widget.ConstraintLayout>