<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/set_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/settings_title"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/settings_save"
        android:layout_width="83dp"
        android:layout_height="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="64dp"
        android:background="@drawable/accent_rounded_corners"
        android:text="@string/settings_save"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.568"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_taxrate_t"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/set_province_t"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:text="@string/set_tax_province"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/set_taxrate_t"
        app:layout_constraintEnd_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_title"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/set_taxrate_t"
        android:layout_width="111dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="100dp"
        android:text="@string/set_tax_title"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/editTextNumberDecimal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <EditText
        android:id="@+id/editTextNumberDecimal"
        android:layout_width="148dp"
        android:layout_height="46dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="156dp" />

    <Switch
        android:id="@+id/settings_used"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/setting_taxes"
        android:textAllCaps="true"
        android:textColor="@color/colorAccent"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberDecimal" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="146dp"
        android:layout_height="49dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editTextNumberDecimal"
        app:layout_constraintTop_toBottomOf="@+id/set_title"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="231dp"
        tools:text="@string/set_tax_province" />
</androidx.constraintlayout.widget.ConstraintLayout>