<RelativeLayout android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="30dp"
    android:orientation="horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_items"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/rl_fields"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="4dp"
        android:orientation="vertical">



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp">

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item"
                android:singleLine="true"
                android:textSize="14sp" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/ll_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/til_name"
            android:weightSum="4.5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="3">

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/price"
                    android:inputType="numberDecimal"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_qnty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/til_price"
                android:layout_weight="1.5">

                <EditText
                    android:id="@+id/et_qnty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/quantity_short"
                    android:inputType="number"
                    android:singleLine="true"
                    android:textSize="14sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>
    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/rl_fields"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:layout_marginBottom="8dp"
        android:background="@drawable/accent_rounded_corners"
        android:clickable="false"
        android:padding="6dp"
        android:src="@drawable/ic_baseline_add_shopping_cart" />
</RelativeLayout>